add bannar Division

--- a/index.html
+++ b/index.html
@@ -3,10 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Devoloper Portfolio</title>
 </head>
-<body>
-    
+<body class=".open-sans-normal">
+    <header class="top-bannar">
+        <nav>
+            <h3 class="nav-title">Ma<span class="Marry">r</span>y</h3>
+            <ul>
+                <li><a class="color-code" href="">Portfolio</a></li>
+                <li><a class="color-code"  href="">Blog</a></li>
+                <li><a class="color-code" target="_blank" href="https://wa.me/qr/NB2VXV3UD7LIP1"><button class="btn-primary">Here Me</button></a></li>
+            </ul>
+        </nav>
+        <div class="bannar">
+            <div class="bannar-containar">
+                <h4 class="bannar-greeding">Hi, I  am</h4>
+                <h1 class="bannar-title">Mary Hardy</h1>
+                <p class="bannar-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
+                </p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img class="bannar-image" src="images/hardy.png" alt="">
+        </div>
+    </header>
 </body>
 </html>
