--- a/index.html
+++ b/index.html
@@ -31,5 +31,74 @@
             <img class="bannar-image" src="images/hardy.png" alt="">
         </div>
     </header>
+    <main class="main">
+        <section class="About secondary-bg">
+            <h3 class="font-title">About Me</h3>
+            <p class="All-font">
+                I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
+            </p>
+            <div class="about-item">
+                <div class="about-footer">
+                    <p class="About-font1">Name:</p>
+                    <p class="About-font2">Mary Hardy</p>
+                </div>
+                <div class="about-footer">
+                    <p class="About-font1">Email</p>
+                    <p class="About-font2">info@gmail.com</p>
+                </div>
+                <div class="about-footer">
+                    <p class="About-font1">Date of birth:</p>
+                    <p class="About-font2">11 November 1987</p>
+                </div>
+                <div class="about-footer">
+                    <p class="About-font1">From:</p>
+                    <p class="About-font2">Los Angeles, USA</p>
+                </div>
+            </div>
+        </section>
+        <section class="skills">
+            <h1 class="font-title text">What I do</h1>
+            <p class="All-font text">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h4 class="skill-tittle About-font2">
+                        Vanilla JavaScript
+                    </h4>
+                    <p class="font-what-i-do skill-descriptation">
+                        List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                    </p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h4 class="skill-tittle About-font2">
+                        React 
+                    </h4>
+                    <p class="font-what-i-do skill-descriptation">
+                        List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                    </p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h4 class="skill-tittle About-font2">
+                        Node.js
+                    </h4>
+                    <p class="font-what-i-do skill-descriptation">
+                        List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                    </p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h4 class="skill-tittle About-font2">
+                        MongoDB
+                    </h4>
+                    <p class="font-what-i-do skill-descriptation">
+                        List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                    </p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
