--- a/index.html
+++ b/index.html
@@ -99,6 +99,60 @@
                 </div>
             </div>
         </section>
+        <section class="summary">
+            <h3 class="summary-title">A summary of My Resume</h3>
+            <div class="summary-Container">
+                <div class="summary-colum">
+                    <h3 class="colum-tittle">My Education</h3>
+                    <div class="Education">
+                        <h3 class="Education-title">Master in Computer Engineering</h3>
+                        <h4 class="Education-sub-title">Harvard University / 2015 - 2017</h4>
+                        <div class="Education-Discription">
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div><hr>
+                    <div class="Education">
+                        <h3 class="Education-title">Master in Computer Engineering</h3>
+                        <h4 class="Education-sub-title">Harvard University / 2015 - 2017</h4>
+                        <div class="Education-Discription">
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div> <hr>
+                    <div class="Education">
+                        <h3 class="Education-title">Master in Computer Engineering</h3>
+                        <h4 class="Education-sub-title">Harvard University / 2015 - 2017</h4>
+                        <div class="Education-Discription">
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    
+                </div>
+                <div class="summary-colum">
+                    <h3 class="colum-tittle">My Experience</h3> 
+                    <div class="Education">
+                        <h3 class="Education-title">Master in Computer Engineering</h3>
+                        <h4 class="Education-sub-title">Harvard University / 2015 - 2017</h4>
+                        <div class="Education-Discription">
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div> <hr>
+                    <div class="Education">
+                        <h3 class="Education-title">Master in Computer Engineering</h3>
+                        <h4 class="Education-sub-title">Harvard University / 2015 - 2017</h4>
+                        <div class="Education-Discription">
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div> <hr>
+                    <div class="Education">
+                        <h3 class="Education-title">Master in Computer Engineering</h3>
+                        <h4 class="Education-sub-title">Harvard University / 2015 - 2017</h4>
+                        <div class="Education-Discription">
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
