--- a/index.html
+++ b/index.html
@@ -130,29 +130,56 @@
                 <div class="summary-colum">
                     <h3 class="colum-tittle">My Experience</h3> 
                     <div class="Education">
-                        <h3 class="Education-title">Master in Computer Engineering</h3>
-                        <h4 class="Education-sub-title">Harvard University / 2015 - 2017</h4>
+                        <h3 class="Education-title">Sr. Font End Developer</h3>
+                        <h4 class="Education-sub-title">Apple Inc / 2020 - Current</h4>
                         <div class="Education-Discription">
                             List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
                         </div>
                     </div> <hr>
                     <div class="Education">
-                        <h3 class="Education-title">Master in Computer Engineering</h3>
-                        <h4 class="Education-sub-title">Harvard University / 2015 - 2017</h4>
-                        <div class="Education-Discription">
-                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                        </div>
-                    </div> <hr>
-                    <div class="Education">
-                        <h3 class="Education-title">Master in Computer Engineering</h3>
-                        <h4 class="Education-sub-title">Harvard University / 2015 - 2017</h4>
+                        <h3 class="Education-title">Jr. Font End Developer</h3>
+                        <h4 class="Education-sub-title">Dribbble Inc / 2018 - 2022</h4>
                         <div class="Education-Discription">
                             List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
                         </div>
                     </div>
+                    <hr>
+                    <div class="Education">
+                        <h3 class="Education-title">HTML Developer</h3>
+                        <h4 class="Education-sub-title">Adobe Inc / 2017 - 2018</h4>
+                        <div class="Education-Discription">
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div> 
                 </div>
+            </div>
+            <div class="button-cv">
+                <button class="btn-primary">Download CV</button>
             </div>
         </section>
     </main>
+    <footer class="secondary-bg">
+       <div class="footer-colom">
+        <h3 class="footer-title">Lets Connect</h3>
+        <p class="footer-Discription">
+            
+                Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+        </p>
+        <div>
+            <a href=""><img src="images/icons/facebook.png" alt=""></a>
+            <a href=""><img src="images/icons/insta.png" alt=""></a>
+            <a href=""><img src="images/icons/twitter.png" alt=""></a>
+        </div>
+       </div>
+        <div class="footer-colom">
+            <h3 class="footer-title">Let’s Message me</h3>
+            <form class="footer-line" action="">
+                <input class="Education-Discription" placeholder="Your name" type="text">
+                <input class="Education-Discription" type="email" placeholder="Your email" name="" id="">
+                <textarea class="Education-Discription" placeholder="Message" name="" id="" cols="10" rows="10"></textarea>
+                <input class="btn-primary footer-btn" type="button" value="Submit">
+            </form>
+        </div>
+    </footer>
 </body>
 </html>
