--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/dfc604c676.js" crossorigin="anonymous"></script>
     <title>Devoloper Portfolio</title>
 </head>
 <body class=".open-sans-normal">
@@ -25,8 +26,8 @@
                 <h1 class="bannar-title">Mary Hardy</h1>
                 <p class="bannar-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
                 </p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i>  Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="bannar-image" src="images/hardy.png" alt="">
         </div>
@@ -154,7 +155,7 @@
                 </div>
             </div>
             <div class="button-cv">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i>  Download CV</button>
             </div>
         </section>
     </main>
